--- a/templates/interface.html
+++ b/templates/interface.html
@@ -113,6 +113,7 @@
 
       // 从后端获取ID
       fetch('http://localhost:8080/api/get-thread-id')
+      // fetch('http://172.18.151.49:8080/api/get-thread-id')
       .then(response => response.json())
       .then(data => {
         // 存储从后端获取的ID
@@ -230,6 +231,7 @@
       }
 
       fetch('http://localhost:8080/api/thread-messages', {
+      // fetch('http://172.18.151.49:8080/api/thread-messages', {
           method: 'POST',
           headers: {
               'Content-Type': 'application/json',
